--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uplc = { git = "https://github.com/aiken-lang/aiken.git" }
+uplc = { git="https://github.com/SundaeSwap-finance/aiken.git", rev = "a8919e65" }
 num-bigint = "0.4"
+clap = { version = "4.5.3", features = ["derive"] }
+anyhow = "1.0.81"
+pallas = "0.22.0"
