--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# uplc = { git="https://github.com/SundaeSwap-finance/aiken.git", rev = "a8919e65" }
-uplc = { path = "../aiken/crates/uplc" }
+uplc = { git="https://github.com/SundaeSwap-finance/aiken.git", rev = "68965b52" }
+# uplc = { path = "../aiken/crates/uplc" }
 num-bigint = "0.4"
 clap = { version = "4.5.3", features = ["derive"] }
 anyhow = "1.0.81"
@@ -15,3 +15,4 @@ pallas = "0.22.0"
 ratatui = { version = "0.26.1", features = ["all-widgets"] }
 crossterm = "0.27.0"
 color-eyre = "0.6.3"
+# pretty = "0.12.3"
