--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ ratatui = { version = "0.26.1", features = ["all-widgets"] }
 crossterm = "0.27.0"
 color-eyre = "0.6.3"
 # pretty = "0.12.3"
+hex = "0.4.3"
+aiken-project = { path= "../aiken/crates/aiken-project" }
