--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,13 @@ hex = "0.4"
 inherits = "release"
 lto = "thin"
 
+[[bin]]
+name = "gastronomy-cli"
+path = "src/bin/cli.rs"
+
+[workspace]
+exclude = ["src-tauri/Cargo.toml"]
+
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
