--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "gastronomy"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/SundaeSwap-finance/gastronomy"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
