--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ color-eyre = "0.6"
 # pretty = "0.12.3"
 hex = "0.4"
 
+[package.metadata.dist]
+dist = true
+
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
