--- a/gastronomy-ui/Cargo.toml
+++ b/gastronomy-ui/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/SundaeSwap-finance/gastronomy"
 description = "Gastronomy GUI"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +13,7 @@ tauri-build = { version = "1.5.3", features = [] }
 
 [dependencies]
 dashmap = "6"
-gastronomy = { path = ".." }
+gastronomy = { path = "../gastronomy" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.7.0", features = [ "dialog-open"] }
