--- a/gastronomy-ui/Cargo.toml
+++ b/gastronomy-ui/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gastronomy-ui"
-version = "0.1.0"
+version = "0.3.1"
 edition = "2021"
 repository = "https://github.com/SundaeSwap-finance/gastronomy"
 description = "Gastronomy GUI"
@@ -23,3 +23,8 @@ tauri = { version = "1.7.0", features = [ "dialog-open"] }
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
+
+[package.metadata.release]
+pre-release-replacements = [
+  {file="tauri.conf.json", search="\"version\": \".*\"", replace="\"version\": \"{{version}}\""},
+]
