Fix bad interaction between cargo-dist and cargo-release

--- a/gastronomy-ui/Cargo.toml
+++ b/gastronomy-ui/Cargo.toml
@@ -24,6 +24,9 @@ tauri = { version = "1.7.0", features = [ "dialog-open"] }
 # DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
 
+[package.metadata.dist]
+dist = false
+
 [package.metadata.release]
 pre-release-replacements = [
   {file="tauri.conf.json", search="\"version\": \".*\"", replace="\"version\": \"{{version}}\""},
