--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ installers = []
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+
+[workspace.metadata.release]
+shared-version = true
+tag-name = "v{{version}}"
