--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,15 @@ installers = []
 targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+# Extra setup steps to make tauri happy
+github-build-setup = "../setup/build-setup.yml"
+
+[workspace.metadata.dist.dependencies.apt]
+"libwebkit2gtk-4.0-dev" = "*"
+"libwebkit2gtk-4.1-dev" = "*"
+"libappindicator3-dev" = "*"
+"librsvg2-dev" = "*"
+"patchelf" = "*"
 
 [workspace.metadata.release]
 shared-version = true
