--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ pr-run-mode = "plan"
 # Extra setup steps to make tauri happy
 github-build-setup = "../setup/build-setup.yml"
 
+[workspace.metadata.dist.github-custom-runners]
+x86_64-unknown-linux-gnu = "ubuntu-22.04"
+
 [workspace.metadata.dist.dependencies.apt]
 "libwebkit2gtk-4.0-dev" = "*"
 "libwebkit2gtk-4.1-dev" = "*"
