--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -283,3 +283,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+
+  custom-release_tauri:
+    needs:
+      - plan
+      - announce
+    uses: ./.github/workflows/release_tauri.yml
+    with:
+      plan: ${{ needs.plan.outputs.val }}
+    secrets: inherit
