--- a/package.json
+++ b/package.json
@@ -20,23 +20,25 @@
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.10.0",
     "@sundaeswap/eslint-config": "^2.0.14",
     "@sundaeswap/prettier-config": "^2.0.13",
-    "@types/node": "^20.14.10",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
+    "eslint": "^9.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.2.2",
+    "typescript": "~5.5.4",
     "vite": "^5.3.1"
   }
 }
