--- a/gastronomy-cli/Cargo.toml
+++ b/gastronomy-cli/Cargo.toml
@@ -10,15 +10,15 @@ publish = false
 
 [dependencies]
 anyhow = "1"
-tokio = { version = "1.40", features = ["full"] }
 clap = { version = "4", features = ["derive", "env"] }
+color-eyre = "0.6"
+crossterm = "0.28"
+figment = { version = "0.10", features = ["env", "toml"] }
 gastronomy = { path = "../gastronomy" }
+ratatui = { version = "0.28", features = ["all-widgets"] }
+tokio = { version = "1.40", features = ["full"] }
 uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
 # uplc = { path = "../aiken/crates/uplc" }
-ratatui = { version = "0.28", features = ["all-widgets"] }
-crossterm = "0.28"
-color-eyre = "0.6"
-# pretty = "0.12.3"
 
 [package.metadata.dist]
 dist = true
