--- a/gastronomy/Cargo.toml
+++ b/gastronomy/Cargo.toml
@@ -9,15 +9,16 @@ publish = false
 
 [dependencies]
 anyhow = "1"
-uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
-# uplc = { path = "../aiken/crates/uplc" }
+blockfrost = "1.0.1"
+figment = { version = "0.10", features = ["toml"] }
+futures = "0.3.30"
+hex = "0.4"
+home = "0.5"
 num-bigint = "0.4"
 pallas = { version = "0.30.1", features = ["applying"] }
+reqwest = "0.12"
 serde = "1"
 serde_json = "1"
+uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
+# uplc = { path = "../aiken/crates/uplc" }
 uuid = { version = "1", features = ["v4"] }
-# pretty = "0.12.3"
-hex = "0.4"
-blockfrost = "1.0.1"
-futures = "0.3.30"
-reqwest = "0.12"
