--- a/gastronomy/Cargo.toml
+++ b/gastronomy/Cargo.toml
@@ -14,6 +14,7 @@ figment = { version = "0.10", features = ["toml"] }
 futures = "0.3.30"
 hex = "0.4"
 home = "0.5"
+minicbor = "0.20"
 num-bigint = "0.4"
 pallas = { version = "0.30.1", features = ["applying"] }
 reqwest = "0.12"
