--- a/gastronomy/Cargo.toml
+++ b/gastronomy/Cargo.toml
@@ -20,6 +20,6 @@ pallas = { version = "0.30.1", features = ["applying"] }
 reqwest = "0.12"
 serde = "1"
 serde_json = "1"
-uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "e5a60f3" }
-# uplc = { path = "../aiken/crates/uplc" }
+uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "3c2ae7c" }
+# uplc = { path = "../../aiken/crates/uplc" }
 uuid = { version = "1", features = ["v4"] }
