--- a/gastronomy-ui/Cargo.toml
+++ b/gastronomy-ui/Cargo.toml
@@ -12,14 +12,16 @@ publish = false
 tauri-build = { version = "1.5.3", features = [] }
 
 [dependencies]
-figment = { version = "0.10", features = ["env", "toml"] }
 dashmap = "6"
+figment = { version = "0.10", features = ["env", "toml"] }
 gastronomy = { path = "../gastronomy" }
+pallas-codec = "0.30"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.7.0", features = ["dialog-open"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tokio = "1.40"
+uuid = { version = "1", features = ["v4"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
