--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.6.0",
     "classnames": "^2.5.1",
+    "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -25,6 +26,7 @@
     "@sundaeswap/prettier-config": "^2.0.13",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.4",
+    "@types/object-path": "^0.11.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
