--- a/gastronomy-ui/Cargo.toml
+++ b/gastronomy-ui/Cargo.toml
@@ -18,7 +18,7 @@ gastronomy = { path = "../gastronomy" }
 pallas-codec = "0.30"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.7.0", features = ["dialog-open"] }
+tauri = { version = "1.7.0", features = [ "dialog-message", "dialog-open"] }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tokio = "1.40"
 uuid = { version = "1", features = ["v4"] }
