--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: lts/*
       - uses: borales/actions-yarn@v4
         with:
           cmd: install
