--- a/gastronomy-cli/Cargo.toml
+++ b/gastronomy-cli/Cargo.toml
@@ -16,6 +16,7 @@ crossterm = "0.28"
 figment = { version = "0.10", features = ["env", "toml"] }
 gastronomy = { path = "../gastronomy" }
 ratatui = { version = "0.29", features = ["all-widgets"] }
+terminal-clipboard = "0.4"
 tokio = { version = "1.41", features = ["full"] }
 uplc = { git = "https://github.com/SundaeSwap-finance/aiken.git", rev = "7aa5a43" }
 # uplc = { path = "../../aiken/crates/uplc" }
