--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.6.0",
+    "@tauri-apps/api": "2.0.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-store": "~2",
     "classnames": "^2.5.1",
     "object-path": "^0.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-loader-spinner": "^6.1.6",
-    "tauri-plugin-store-api": "github:tauri-apps/tauri-plugin-store#v1"
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
